# continuacao-projeto-2-ai

./: README.md  jogos_confianca_70.csv  jogos_confianca_70_apostas.csv  notebook_data.ipynb  notebook_model.ipynb  puxando-base-de-dados.py  pyproject.toml
dados/: feature_matrix_test.parquet  feature_matrix_train.parquet  matches_test.parquet  matches_train.parquet
dados/puxando_base_de_dados/: premier_league_all_seasons.csv
data/raw/: E0_0001.csv  E0_0102.csv  E0_0203.csv  E0_0304.csv  E0_0405.csv  E0_0506.csv  E0_0607.csv  E0_0708.csv  E0_0809.csv  E0_0910.csv  E0_1011.csv  E0_1112.csv  E0_1213.csv  E0_1314.csv  E0_1415.csv  E0_1516.csv  E0_1617.csv  E0_1718.csv  E0_1819.csv  E0_1920.csv  E0_2021.csv  E0_2122.csv  E0_2223.csv  E0_2324.csv  E0_2425.csv  E0_2526.csv  E0_9394.csv  E0_9495.csv  E0_9596.csv  E0_9697.csv  E0_9798.csv  E0_9899.csv  E0_9900.csv
